--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,19 @@
 body {
-  margin: 0;
+  margin: 20px 270px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Montserrat", sans-serif;
 }
+
+@media screen and (max-width: 1340px) {
+  body {
+    margin: 20px 30px;
+  }
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
