--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 20px 270px;
+  margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -8,8 +8,12 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+.body-wrapper {
+  margin: 20px 270px;
+}
+
 @media screen and (max-width: 1340px) {
-  body {
+  .body-wrapper {
     margin: 20px 30px;
   }
 }
